kai-nuxtjs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kai-nuxtjs
  namespace: dev
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: kai-nuxtjs
  template:
    metadata:
      labels:
        app: kai-nuxtjs
    spec:
      containers:
        - name: kai-nuxtjs
          image: ghcr.io/the-cloud-camp/project-demo:dev-d4db189
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
