kai-nuxtjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kai-nuxtjs-service-dev
  namespace: dev
spec:
  selector:
    app: kai-nuxtjs-dev
  ports:
  - port: 3000
    targetPort: 3000
