kai-nuxtjs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kai-nuxtjs
  namespace: dev
  labels:
    name: kai-nuxtjs
spec:
  rules:
  - host: tcc-01.th1.proen.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kai-nuxtjs
            port: 
              number: 3000
